refactor(*): changes for support Java 8
changes Java 11 source codes to Java 8 style;
adds more null checks.